--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -94,7 +94,7 @@ body {
   box-shadow: 2px 4px 9px 3px rgba(0, 0, 0, 0.258633);
   border-radius: 28px;
   cursor: pointer;
-  transition: all ease-in 0.1s;
+  transition: background-color ease-in 0.1s, color ease-in 0.1s;
 }
 
 .register:hover {
@@ -126,7 +126,7 @@ body {
   justify-content: center;
   text-decoration: none;
   color: #ffffff;
-  transition: all ease-in 0.1s;
+  transition: border-color ease-in 0.1s, color ease-in 0.1s;
 }
 
 .icon:visited {
@@ -153,7 +153,6 @@ i {
   text-align: center;
   background-color: var(--soft-blue);
   color: var(--very-dark-blue-main-bg);
-  transition: all ease-in 0.1s;
 }
 
 .attribution a,
