--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -44,7 +44,7 @@ body {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  align-items: center;
+  align-items: flex-start;
   justify-content: center;
   gap: 60px;
   padding-left: clamp(34px, 9vw, 80px);
@@ -64,8 +64,8 @@ body {
 
 .hero-text-container h1 {
   font-weight: bold;
-  font-size: clamp(1.5rem, 6.4vw, 2.5rem);
-  line-height: clamp(2.25rem, 9.6vw, 3.75rem);
+  font-size: 1.5rem;
+  line-height: 2.25rem;
   text-align: center;
   width: clamp(280px, 74.6vw, 487px);
 }
@@ -73,8 +73,8 @@ body {
 .hero-text-container p {
   margin-top: clamp(16px, 4.26vw, 24px);
   font-family: 'Open Sans';
-  font-size: clamp(1rem, 4.2vw, 1.125rem);
-  line-height: clamp(1.5rem, 6.4vw, 1.6875rem);
+  font-size: 1rem;
+  line-height: 1.5rem;
   text-align: center;
   width: clamp(304px, 81vw, 520px);
 }
@@ -84,8 +84,8 @@ body {
   width: 200px;
   height: clamp(40px, 10.6vw, 56px);
   text-decoration: none;
-  font-size: clamp(0.75rem, 3.2vw, 1.125rem);
-  line-height: clamp(1.125rem, 4.8vw, 1.6875rem);
+  font-size: 0.75rem;
+  line-height: 1.125rem;
   color: var(--violet);
   display: flex;
   align-items: center;
