--- a/styles/desktop.css
+++ b/styles/desktop.css
@@ -4,16 +4,26 @@
   }
 
   .hero-text-container {
+    margin-top: 32px;
     align-items: flex-start;
   }
 
   .hero-text-container h1 {
     text-align: left;
+    font-size: 2.5rem;
+    line-height: 3.75rem;
     width: clamp(280px, 74.6vw, 487px);
   }
 
   .hero-text-container p {
+    font-size: 1.125rem;
+    line-height: 1.6875rem;
     text-align: left;
+  }
+
+  .register {
+    font-size: 1.125rem;
+    line-height: 1.6875rem;
   }
 
   .huddle-footer {
